# RandomForestWithGPs

./: .gitignore  README.md
.metadata/: version.ini
.metadata/.plugins/org.eclipse.cdt.core/: RandomForestWithGPs.1463568064953.pdom  RandomForestWithGPs.language.settings.xml
.metadata/.plugins/org.eclipse.core.resources/: 0.snap
.metadata/.plugins/org.eclipse.core.resources/.projects/RandomForestWithGPs/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.epp.logging.aeri.ide/org.eclipse.epp.logging.aeri.ide.server/local-history/: segments_1
.metadata/.plugins/org.eclipse.epp.logging.aeri.ide/org.eclipse.epp.logging.aeri.ide.server/remote-history/: segments_1
.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.97_0/: node.properties
.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.97_0/FP.local.files_0/: node.properties
.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.97_0/H.local_16/: node.properties
.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
RandomForestWithGPs/: .cproject  .gitignore  .project  CMakeLists.txt  Doxyfile
RandomForestWithGPs/GPPython/: gp.py  init.json  t.txt  trainInput.txt  visu.txt
RandomForestWithGPs/PythonScripts/: collectLogFiles.py  combineFakeData.py  findSameInitFile.py  generate64Gaussian.py  generateDataForThesis.py  generateEightGaussian.py  generateFourGaussian.py  generateGaussians.py  generateTestSettings.py  generateTwoCircles.py  generateTwoGaussianData.py  getResults.py  loadFiles.py  plotData.py  plotData2.py  plotRandomForestRes.py  script.py  testDataGenerate.py
RandomForestWithGPs/Settings/: cmaes_initials.par  cmaes_signals.par  init.json  testSettings.init  testSettingsPy.init
RandomForestWithGPs/realData/dog/: images.txt
RandomForestWithGPs/realData/whiskey/: Readme.txt  images.txt
RandomForestWithGPs/src/: RandomForestWithGPs.cpp  kernelCalc.h  main.cc
RandomForestWithGPs/src/Base/: BaseType.h  CommandSettings.cc  CommandSettings.h  InformationPackage.cc  InformationPackage.h  Logger.cc  Logger.h  Observer.cc  Observer.h  Predictor.h  RealType.h  ScreenOutput.cc  ScreenOutput.h  Settings.cc  Settings.h  Singleton.h  Thread.h  ThreadMaster.cc  ThreadMaster.h  Types.h
RandomForestWithGPs/src/CMAES/: boundary_transformation.cc  boundary_transformation.h  cmaes.cc  cmaes.h
RandomForestWithGPs/src/Data/: ClassData.cc  ClassData.h  ClassKnowledge.cc  ClassKnowledge.h  ClassPoint.cc  ClassPoint.h  Data.h  DataBinaryWriter.cc  DataBinaryWriter.h  DataContainer.cc  DataContainer.h  DataConverter.cc  DataConverter.h  DataPoint.cc  DataPoint.h  DataReader.cc  DataReader.h  DataSets.h  DataWriterForVisu.cc  DataWriterForVisu.h  LabeledVectorX.cc  LabeledVectorX.h  OnlineStorage.h  OnlineStorage_i.h  TotalStorage.cc  TotalStorage.h
RandomForestWithGPs/src/GaussianProcess/: BayesOptimizer.cc  BayesOptimizer.h  BayesOptimizerIVM.cc  BayesOptimizerIVM.h  BestHyperParams.cc  BestHyperParams.h  GaussianProcess.cc  GaussianProcess.h  GaussianProcessBinary.cc  GaussianProcessBinary.h  GaussianProcessBinaryClass.cc  GaussianProcessBinaryClass.h  GaussianProcessMultiBinary.cc  GaussianProcessMultiBinary.h  GaussianProcessMultiClass.cc  GaussianProcessMultiClass.h  GaussianProcessWriter.cc  GaussianProcessWriter.h  IVM.cc  IVM.h  IVMMultiBinary.cc  IVMMultiBinary.h  Kernel.cc  Kernel.h  LevenbergMarquardtSolver.h
RandomForestWithGPs/src/GaussianProcess/Kernel/: GaussianKernel.cc  GaussianKernel.h  GaussianKernelOptimizer.cc  GaussianKernelOptimizer.h  KernelBase.h  KernelBase_i.h  KernelType.cc  KernelType.h  RandomForestKernel.cc  RandomForestKernel.h
RandomForestWithGPs/src/RandomForestGaussianProcess/: OnlineRandomForestIVMs.cc  OnlineRandomForestIVMs.h  RFGPWriter.cc  RFGPWriter.h  RandomForestGaussianProcess.cc  RandomForestGaussianProcess.h
RandomForestWithGPs/src/RandomForests/: AcceptanceCalculator.cc  AcceptanceCalculator.h  BigDynamicDecisionTree.cc  BigDynamicDecisionTree.h  ClassCounter.cc  ClassCounter.h  Data.h  DecisionTree.cc  DecisionTree.cpp  DecisionTree.h  DecisionTreeData.h  DynamicDecisionTree.cc  DynamicDecisionTree.h  DynamicDecisionTreeInterface.h  DynamicDecisionTree_i.h  GlobalLifeTimeMeasurement.cc  GlobalLifeTimeMeasurement.h  OnlineRandomForest.cc  OnlineRandomForest.h  OtherDecisionTree.cc  OtherDecisionTree.h  OtherRandomForest.cc  OtherRandomForest.h  RandomForest.cc  RandomForest.h  RandomForestWriter.cc  RandomForestWriter.h  TreeCounter.h
RandomForestWithGPs/src/RandomNumberGenerator/: RandomExponentialNr.cc  RandomExponentialNr.h  RandomGaussianNr.cc  RandomGaussianNr.h  RandomNumberGeneratorForDT.cc  RandomNumberGeneratorForDT.h  RandomUniformNr.cc  RandomUniformNr.h
RandomForestWithGPs/src/Tests/: TestInformation.cc  TestInformation.h  TestManager.cc  TestManager.h  binaryClassGPTest.h  binaryClassIVMTest.h  binaryClassORFTest.h  binaryClassRFTest.h  multiClassGPTest.h  multiClassIVMTest.h  multiClassORFIVMTest.h  multiClassRFGPTest.h  performanceMeasurement.h  tests.h
RandomForestWithGPs/src/Tests/SpeedTests/: ArgMaxAndMin.h  EigenVectorX.h  RandomNumbers.h  TestHeader.h
RandomForestWithGPs/src/UnitTests/: DataTests.h
RandomForestWithGPs/src/Utility/: AvgNumber.h  ColorConverter.h  ConfusionMatrixPrinter.cc  ConfusionMatrixPrinter.h  GlobalStopWatch.h  InLinePercentageFiller.cc  InLinePercentageFiller.h  ReadWriterHelper.cc  ReadWriterHelper.h  Settings.cc  Settings.h  StopWatch.cc  StopWatch.h  StringHelper.cc  StringHelper.h  ThreadSafeOutput.cc  ThreadSafeOutput.h  ThreadSafeThreadCounter.cc  ThreadSafeThreadCounter.h  TimeFrame.cc  TimeFrame.h  Util.h
RandomForestWithGPs/testData/: testInput.txt  testInput2.txt  testInput3.txt  testOutput.txt  trainInput.txt  trainedResult.txt  trainedResult2.txt  visuGridResult.txt  visuTestResult.txt
